Fixed Araxis Merge tags

--- a/araxismerge/araxismerge.nuspec
+++ b/araxismerge/araxismerge.nuspec
@@ -10,7 +10,7 @@
     <summary>araxismerge</summary>
     <description>araxismerge</description>
     <projectUrl>http://www.araxis.com/merge/</projectUrl>
-    <tags>araxismerge admin</tags>
+    <tags>araxis merge diff file-compare folder-compare</tags>
     <copyright></copyright>
     <licenseUrl>http://www.araxis.com/merge/documentation-windows/licence-agreement.en</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
