--- a/araxismerge/araxismerge.nuspec
+++ b/araxismerge/araxismerge.nuspec
@@ -26,6 +26,7 @@ Supports folder hierarchy comparison and synchronization, enabling you to compar
     </dependencies>-->
     <releaseNotes>http://www.araxis.com/merge/documentation-windows/release-notes.en</releaseNotes>
     <docsUrl>http://www.araxis.com/merge/documentation.en</docsUrl>
+    <packageSourceUrl>https://github.com/robinminto/ChocolateyPackages</packageSourceUrl>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
